# java-language-server

./: .gitignore  MODULE.bazel  README.md  maven_install.json
src/main/: BUILD
src/main/java/org/javacs/: CompileBatch.java  Docs.java  FileStore.java  InferConfig.java  JarLocator.java  JavaCompilerService.java  JavaLanguageServer.java  Main.java  Parser.java  ReusableCompiler.java  SourceLocator.java
src/main/java/org/javacs/lsp/: LSP.java
src/test/java/org/javacs/: BenchmarkPruner.java  DocsTest.java  InferBazelConfigTest.java  JarLocatorTest.java  JavaCompilerServiceTest.java  LanguageServerFixture.java  SourceLocatorTest.java
src/test/java/org/javacs/rewrite/: RewriteTest.java
